# sfinae14

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  requirements.txt
.github/workflows/: unit-tests.yml
include/: call_foo_if_exist.hpp  has_method.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  sfinae_test.cpp
